--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
 		<div class="container">
 			<div class="row row-padded">
 				<div class="col-md-12 text-center">
-					<p class="to-animate">&copy; 2020 Copyright: Foodee.com <br> Designed by <a href="https://www.instagram.com/belal.zea_11/" target="_blank">ＺΞΛＭΛＲＩ</a>
+					<p class="to-animate">&copy; 2020 Copyright: Food-Network.com <br> Designed by <a href="https://www.instagram.com/belal.zea_11/" target="_blank">ＺΞΛＭΛＲＩ</a>
 					</p>
 					<p class="text-center to-animate"><a href="#" class="js-gotop">Go To Top</a></p>
 				</div>
